Fixed bug related to reading view spacing between headings

--- a/src/sass/editor/_heading.scss
+++ b/src/sass/editor/_heading.scss
@@ -2,7 +2,7 @@
 
 /* Reading view */
 h1, h2, h3, h4, h5, h6 {
-	margin: 0 -8px;
+	margin: 8px -8px;
 	border-radius: var(--radius-s);
 	padding: 4px 8px;
 	transition: background-color .75s ease;
